feat: Changes made in forget password API
